--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="PoweringEG Platform" />
     <meta property="og:description" content="Plataforma de gestão de supervisões ExpressGlass - Relatórios IA, Dashboard, Gestão de Lojas" />
-    <meta property="og:image" content="/poweringeg-ai-icon-512.png" />
+    <meta property="og:image" content="https://poweringeg-3c9mozlh.manus.space/poweringeg-ai-icon-512.png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="PoweringEG Logo" />
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="PoweringEG Platform" />
     <meta name="twitter:description" content="Plataforma de gestão de supervisões ExpressGlass" />
-    <meta name="twitter:image" content="/poweringeg-ai-icon-512.png" />
+    <meta name="twitter:image" content="https://poweringeg-3c9mozlh.manus.space/poweringeg-ai-icon-512.png" />
     
     <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- PWA -->
