--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>PoweringEG Platform</title>
-    <meta name="description" content="Plataforma completa de gestão de supervisões de lojas ExpressGlass com painel Admin e Gestor, relatórios automáticos com IA." />
+    <meta name="description" content="PoweringEG - Plataforma de gestão de supervisões da rede ExpressGlass. Dashboard de resultados, reuniões quinzenais, tarefas e relatórios com IA." />
     
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://poweringeg-3c9mozlh.manus.space/" />
     <meta property="og:title" content="PoweringEG Platform" />
-    <meta property="og:description" content="Plataforma de gestão de supervisões ExpressGlass - Relatórios IA, Dashboard, Gestão de Lojas" />
+    <meta property="og:description" content="Plataforma de gestão da rede ExpressGlass - Dashboard de resultados, reuniões quinzenais, tarefas e relatórios com IA" />
     <meta property="og:image" content="https://poweringeg-3c9mozlh.manus.space/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -24,7 +24,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PoweringEG Platform" />
-    <meta name="twitter:description" content="Plataforma de gestão de supervisões ExpressGlass - Relatórios IA, Dashboard" />
+    <meta name="twitter:description" content="Plataforma de gestão da rede ExpressGlass - Dashboard, reuniões e relatórios com IA" />
     <meta name="twitter:image" content="https://poweringeg-3c9mozlh.manus.space/og-image.png" />
     
     <link rel="icon" type="image/png" href="/favicon.png" />
