--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#10b981" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Tarefas EG" />
+    <meta name="apple-mobile-web-app-title" content="PoweringEG" />
     <link rel="apple-touch-icon" href="/pwa-icon-192.png" />
     <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
