Checkpoint: v4.39 - Visualização de Tópicos de Outros Gestores: Gestores agora podem ver todos os tópicos pendentes (próprios e de outros colegas) com identificação do autor. Apenas podem editar/eliminar os seus próprios tópicos. Interface separada em duas secções: "Meus Tópicos" (editável) e "Tópicos de Outros Gestores" (apenas visualização).

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://poweringeg-3c9mozlh.manus.space/" />
     <meta property="og:title" content="PoweringEG Platform" />
     <meta property="og:description" content="Plataforma de gestão da rede ExpressGlass - Dashboard de resultados, reuniões quinzenais, tarefas e relatórios com IA" />
-    <meta property="og:image" content="https://poweringeg-3c9mozlh.manus.space/og-image.png" />
+    <meta property="og:image" content="https://files.manuscdn.com/user_upload_by_module/session_file/310519663088836799/hgmzpzffMsvrxHis.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="PoweringEG - Plataforma de Gestão ExpressGlass" />
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PoweringEG Platform" />
     <meta name="twitter:description" content="Plataforma de gestão da rede ExpressGlass - Dashboard, reuniões e relatórios com IA" />
-    <meta name="twitter:image" content="https://poweringeg-3c9mozlh.manus.space/og-image.png" />
+    <meta name="twitter:image" content="https://files.manuscdn.com/user_upload_by_module/session_file/310519663088836799/hgmzpzffMsvrxHis.png" />
     
     <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- PWA - Script para trocar manifest baseado no URL (antes do React) -->
